adding basketball images

--- a/test.html
+++ b/test.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="test.css">
-    <script src="test.js"></script>
-    <title>Test</title>
+    <!-- <script src="test.js"></script> -->
+    <title>Basketball Site</title>
 </head>
 <body>
-    <h1 class="test">Test Site</h1>
+    <h1 class="title">Basketball Site</h1>
+    <div class="container">
+        <div id="image">
+        <img src="./images/basketball.jpeg" alt="basketball">
+        </div>
+        <div id="textInside">Swish, music to the ears</div>
+    </div>
 </body>
 </html>
